[project]
name = "acoustid-server"
version = "25.3.1"
description = "AcoustID server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "attrs",
    "blinker",
    "cachetools",
    "click",
    "flask>=2,<3",
    "gevent",
    "gunicorn",
    "markdown==3.1.1",
    "mbdata==25.0.0",
    "msgpack>=1.1.0",
    "nats-py>=2.9.0",
    "psycogreen",
    "psycopg2",
    "python3-openid==3.1.0",
    "pytz",
    "rauth==0.7.3",
    "redis",
    "requests",
    "schedule==0.6.0",
    "six",
    "sqlalchemy>=1.4,<2",
    "statsd",
    "zstd>=1.5.6.6",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort",
    "msgpack-types>=0.5.0",
    "mypy",
    "pyflakes",
    "pytest",
    "sqlalchemy-stubs",
    "types-pytz>=2025.1.0.20250204",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.0.20250306",
    "types-six>=1.17.0.20250304",
    "types-zstd>=1.5.6.6.20250306",
]

[tool.setuptools.packages.find]
include = ["acoustid*"]
namespaces = false
